objects/LM_SLA__c.object
<CustomObject>
    <fields>
        <fullName>Accept_By_SLA_Violation_Period__c</fullName>
        <label>Accept By SLA Violation Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accept_By_SLA_Warning_period__c</fullName>
        <label>Accept By SLA Warning period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acceptance_SLA__c</fullName>
        <description>Whole number in days for the lead to be accepted by the Sales Rep</description>
        <label>Acceptance SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Picklist of all channels</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Federal Government</fullName>
                </value>
                <value>
                    <fullName>FindLaw</fullName>
                </value>
                <value>
                    <fullName>Large Medium Law</fullName>
                </value>
                <value>
                    <fullName>LMS</fullName>
                </value>
                <value>
                    <fullName>Practical Law</fullName>
                </value>
                <value>
                    <fullName>Small Law</fullName>
                </value>
                <value>
                    <fullName>State Government</fullName>
                </value>
                <value>
                    <fullName>Demand Center Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Demand Center Prospect</fullName>
                </value>
                <value>
                    <fullName>Demand Center Lead Queue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Insert comments, if needed</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_SLA__c</fullName>
        <description>Whole number in days for the lead to be converted or rejected by the Sales Rep</description>
        <label>Conversion SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Convert_By_SLA_Violation_period__c</fullName>
        <label>Convert By SLA Violation period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Convert_By_SLA_Warning_Period__c</fullName>
        <label>Convert By SLA Warning Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <description>Picklist of all the lead scores</description>
        <label>Lead Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA_Number__c</fullName>
        <displayFormat>SLA-{00000}</displayFormat>
        <label>SLA Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Send_AcceptBy_Violation_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Accept By Violation Email?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_AcceptBy_Warning_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Accept By Warning Email?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Convert_By_Violation_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Convert By Violation Email?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Convert_By_Warning_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Convert By Warning Email?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Notification_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Email to be sent to User when Lead matches criteria</description>
        <label>Send Notification Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueChannelAndLeadScore__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used to maintain uniqueness for a combination of channel and Lead Score to avoid duplicate combination of channel and Lead score.</description>
        <label>Unique Channel and Lead Score</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>LM SLA</label>
    <nameField>
        <label>Lead Management SLA</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LM SLA&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcceptViolationChecked</fullName>
        <active>true</active>
        <errorConditionFormula>Send_AcceptBy_Violation_Email__c = True &amp;&amp;  ISNULL(Accept_By_SLA_Violation_Period__c)</errorConditionFormula>
        <errorDisplayField>Accept_By_SLA_Violation_Period__c</errorDisplayField>
        <errorMessage>Since Send Accept By Violation Email is checked, please enter value for  Accept By SLA Violation Period</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcceptViolationNotChecked</fullName>
        <active>true</active>
        <errorConditionFormula>Send_AcceptBy_Violation_Email__c = False &amp;&amp;  ISNULL(Accept_By_SLA_Violation_Period__c)=False</errorConditionFormula>
        <errorDisplayField>Accept_By_SLA_Violation_Period__c</errorDisplayField>
        <errorMessage>Since Send Accept By Violation Email is not checked, you can not enter value for  Accept By SLA Violation Period</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcceptWarningPeriodChecked</fullName>
        <active>true</active>
        <errorConditionFormula>Send_AcceptBy_Warning_Email__c = True &amp;&amp;  ISNULL(Accept_By_SLA_Warning_period__c)</errorConditionFormula>
        <errorDisplayField>Accept_By_SLA_Warning_period__c</errorDisplayField>
        <errorMessage>Since Send Accept By Warning Email is checked, please enter value for  Accept By SLA Warning period</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcceptWarningPeriodNotChecked</fullName>
        <active>true</active>
        <errorConditionFormula>Send_AcceptBy_Warning_Email__c = False &amp;&amp;  ISNULL(Accept_By_SLA_Warning_period__c)= False</errorConditionFormula>
        <errorDisplayField>Accept_By_SLA_Warning_period__c</errorDisplayField>
        <errorMessage>Since Send Accept By Warning Email is not checked, You cannot enter value for  Accept By SLA Warning period</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ConvertViolationChecked</fullName>
        <active>true</active>
        <errorConditionFormula>Send_Convert_By_Violation_Email__c  = True &amp;&amp; ISNULL( Convert_By_SLA_Violation_period__c )</errorConditionFormula>
        <errorDisplayField>Convert_By_SLA_Violation_period__c</errorDisplayField>
        <errorMessage>Since Send Convert By Violation Email is checked, please enter value for Convert By SLA Violation period</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ConvertViolationNotChecked</fullName>
        <active>true</active>
        <errorConditionFormula>Send_Convert_By_Violation_Email__c = False &amp;&amp; ISNULL( Convert_By_SLA_Violation_period__c ) = False</errorConditionFormula>
        <errorDisplayField>Convert_By_SLA_Violation_period__c</errorDisplayField>
        <errorMessage>Since Send Convert By Violation Email is not checked, you cannot enter value for Convert By SLA Violation period</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ConvertWarningChecked</fullName>
        <active>true</active>
        <errorConditionFormula>Send_Convert_By_Warning_Email__c = True &amp;&amp; ISNULL(Convert_By_SLA_Warning_Period__c)</errorConditionFormula>
        <errorDisplayField>Convert_By_SLA_Warning_Period__c</errorDisplayField>
        <errorMessage>Since Send Convert By Warning Email is checked, please enter value for  Convert By SLA Warning Period</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ConvertWarningNotChecked</fullName>
        <active>true</active>
        <errorConditionFormula>Send_Convert_By_Warning_Email__c = False &amp;&amp; ISNULL(Convert_By_SLA_Warning_Period__c) =  False</errorConditionFormula>
        <errorDisplayField>Convert_By_SLA_Warning_Period__c</errorDisplayField>
        <errorMessage>Since Send Convert By Warning Email is not checked,you can not enter value for  Convert By SLA Warning Period</errorMessage>
    </validationRules>
</CustomObject>